# jupyternotebooks

./: .gitignore  AGENTS.md  pyproject.toml  qwen_image_edit_benchmark.ipynb  qwen_image_edit_benchmark.py  qwen_image_ocr_experiment.ipynb  setup_docker.sh  vjepa-2.ipynb
